Bug 499644 - Dolphin 24.12.2: Symlink folder icons/previews are too small
Summary: Dolphin 24.12.2: Symlink folder icons/previews are too small
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: icons mode (other bugs)
Version First Reported In: 24.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 500605 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-02-07 14:35 UTC by Zesko
Modified: 2025-03-04 09:34 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12.3
Sentry Crash Report:


Attachments
See the symlink preview is too small (6.14 KB, image/jpeg)
2025-02-07 14:35 UTC, Zesko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zesko 2025-02-07 14:35:33 UTC
Created attachment 178049 [details]
See the symlink preview is too small

SUMMARY

After upgrading from Dolphin 24.12.1 to 24.12.2, symlink folder previews appear broken and display at an unusually small size.

STEPS TO REPRODUCE
1.  Open Dolphin and go to settings:
    Configure Dolphin -> Interface -> Previews
    Enable/select "Folders" and "Text Files", then click OK. 

2.  Create a test file in your Documents folder:
     $ echo "hello" > ~/Documents/test_file.txt

3. Create a symlink to the Documents folder:
     $ ln -s ~/Documents ~/Desktop/symlink_folder

4. Open Dolphin and navigate to ~/Desktop to check if the folder preview icon is displayed too small:
     $ dolphin ~/Desktop 


OBSERVED RESULT
* The folder icons/previews for symlinks appear broken and are displayed at an unusually small size.


EXPECTED RESULT
* This issue occurs only in Dolphin 24.12.2. The previous version (24.12.1) does not have this problem.


SOFTWARE/OS VERSIONS
* Arch Linux, KDE Plasma 6.2.5
* KDE Plasma Version:  6.2.5
* KDE Frameworks Version: 6.10.0
* Qt Version: 6.8.2
Comment 1 luca 2025-02-08 07:32:44 UTC
I can confirm in Debian Sid
Comment 3 Eren 2025-02-09 08:13:06 UTC
Can confirm on 24.12.2 but commit 961e6270e4401a6c7512df3a2e3efd09a25df962 from Jan 17 seems to have already fixed it. It was not included in the release.
Comment 4 Méven Car 2025-02-09 12:41:29 UTC
This should be fixed in KF 6.11, due February 14.
Comment 5 Eleuth 2025-02-17 14:28:19 UTC
(In reply to Méven Car from comment #4)
> This should be fixed in KF 6.11, due February 14.

I've just updated to KF 6.11 on Arch and problem persists.
Comment 6 swh 2025-02-17 15:01:26 UTC
(In reply to Méven Car from comment #4)
> This should be fixed in KF 6.11, due February 14.

Updated to KF 6.11. No changes
Comment 7 Méven 2025-02-17 15:51:52 UTC
(In reply to swh from comment #6)
> (In reply to Méven Car from comment #4)
> > This should be fixed in KF 6.11, due February 14.
> 
> Updated to KF 6.11. No changes

I confirm, I didn't test it properly.

This is fixed in Dolphin 25.04.
Will try to fix it sooner.
Comment 8 Zebra2711 2025-02-17 16:39:26 UTC
This bug is caused by commit
https://github.com/KDE/dolphin/commit/50d44ab177f93ca3acd372f492f4fc3b1015286e
Comment 9 Méven 2025-02-19 09:52:10 UTC
(In reply to Zebra2711 from comment #8)
> This bug is caused by commit
> https://github.com/KDE/dolphin/commit/
> 50d44ab177f93ca3acd372f492f4fc3b1015286e

No this is more complicated than that.

The real origin is https://invent.kde.org/system/dolphin/-/merge_requests/804
Comment 10 Bug Janitor Service 2025-02-20 17:32:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/912
Comment 11 Filip 2025-02-23 07:03:53 UTC
*** Bug 500605 has been marked as a duplicate of this bug. ***
Comment 12 Méven 2025-02-23 13:24:53 UTC
Git commit f79587b9c290f0377ddb7eea002fff816bd57170 by Méven Car.
Committed on 23/02/2025 at 13:20.
Pushed by meven into branch 'release/24.12'.

kitemrolesupdater: fix size of icon when there is an overlay

M  +1    -2    src/kitemviews/kfileitemmodelrolesupdater.cpp

https://invent.kde.org/system/dolphin/-/commit/f79587b9c290f0377ddb7eea002fff816bd57170