kitemrolesupdater: fix size of icon when there is an overlay

BUG: 499644